src/test/deca/context/invalid/homemade/tests/test_non_implemented/test_cast_invalid_boolean_float.deca
// test invalide de la règle cast



{
    float a = 8.1;
    (boolean) (a);
}